Issue #2011 - fix broken layout in comment section

--- a/webcompat/static/css/src/issue.css
+++ b/webcompat/static/css/src/issue.css
@@ -57,6 +57,11 @@
   justify-content: center;
 }
 
+.grid-nested .issue-comment .comment-body {
+  padding: 10px 10px 10px 12px;
+}
+
+
 /* As we can not add a class to the img right now (markup parsers are complicated), we need to use the element */
 .comment-body img {
   max-width: calc(var(--unit-modul-m) - (var(--unit-space) * 4));
